fix spacing for contact page

--- a/styles.css
+++ b/styles.css
@@ -257,6 +257,7 @@ footer {
     gap: 30px;
     flex-grow: 10;
     background-color:#3F0D12;
+    padding-bottom: 50px;
 }
 
 #excellence {
